cmake_minimum_required(VERSION 3.20)

project(advent_of_code_2024)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wsign-conversion -pedantic")

add_executable(aoc_2024_01 aoc_2024_01.cpp shared.cpp)
add_executable(aoc_2024_02 aoc_2024_02.cpp shared.cpp)
add_executable(aoc_2024_03 aoc_2024_03.cpp shared.cpp)
add_executable(aoc_2024_04 aoc_2024_04.cpp shared.cpp)
add_executable(aoc_2024_05 aoc_2024_05.cpp shared.cpp)
add_executable(aoc_2024_06 aoc_2024_06.cpp shared.cpp)
add_executable(aoc_2024_07 aoc_2024_07.cpp shared.cpp)
add_executable(aoc_2024_08 aoc_2024_08.cpp shared.cpp)
add_executable(aoc_2024_09 aoc_2024_09.cpp shared.cpp)
add_executable(aoc_2024_10 aoc_2024_10.cpp shared.cpp)
add_executable(aoc_2024_11 aoc_2024_11.cpp shared.cpp)
add_executable(aoc_2024_12 aoc_2024_12.cpp shared.cpp)
add_executable(aoc_2024_13 aoc_2024_13.cpp shared.cpp)
add_executable(aoc_2024_14 aoc_2024_14.cpp shared.cpp)
add_executable(aoc_2024_15 aoc_2024_15.cpp shared.cpp)
